--- a/XNA_GSM/XNA_GSM/XNA_GSM.csproj
+++ b/XNA_GSM/XNA_GSM/XNA_GSM.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{839056CC-701B-44AD-AABA-D7F5032D3FC0}</ProjectGuid>
+    <ProjectGuid>{06160E1F-2DA6-4BBE-96C6-528FE350CEA7}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Digger</RootNamespace>
-    <AssemblyName>Digger</AssemblyName>
+    <RootNamespace>XNA_GSM</RootNamespace>
+    <AssemblyName>XNA_GSM</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MonoGamePlatform>Windows</MonoGamePlatform>
     <MonoGameContentBuilderExe>
@@ -42,23 +42,22 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="AnimatedSprite.cs" />
-    <Compile Include="Data\GameSettings.cs" />
-    <Compile Include="Data\UserData.cs" />
     <Compile Include="Game1.cs" />
-    <Compile Include="GameView.cs" />
-    <Compile Include="IActor.cs" />
-    <Compile Include="IDrawable.cs" />
-    <Compile Include="InterfaceManager.cs" />
-    <Compile Include="IUpdatable.cs" />
-    <Compile Include="Practicle.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UserInterface\Button.cs" />
-    <Compile Include="MenuView.cs" />
-    <Compile Include="UserInterface\Submenu.cs" />
-    <Compile Include="UserInterface\TextInput.cs" />
-    <Compile Include="View.cs" />
+    <Compile Include="ScreenManager\GameScreen.cs" />
+    <Compile Include="ScreenManager\InputState.cs" />
+    <Compile Include="ScreenManager\ScreenManager.cs" />
+    <Compile Include="Screens\BackgroundScreen.cs" />
+    <Compile Include="Screens\GameplayScreen.cs" />
+    <Compile Include="Screens\LoadingScreen.cs" />
+    <Compile Include="Screens\MainMenuScreen.cs" />
+    <Compile Include="Screens\MenuEntry.cs" />
+    <Compile Include="Screens\MenuScreen.cs" />
+    <Compile Include="Screens\MessageBoxScreen.cs" />
+    <Compile Include="Screens\OptionsMenuScreen.cs" />
+    <Compile Include="Screens\PauseMenuScreen.cs" />
+    <Compile Include="Screens\PlayerIndexEventArgs.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
@@ -68,11 +67,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\arrow.png" />
-    <Content Include="Content\blue.png" />
-    <Content Include="Content\green.png" />
-    <Content Include="Content\red.png" />
-    <Content Include="Content\SmileyWalk.png" />
+    <Content Include="Background.png" />
+    <Content Include="Content\background.png" />
+    <Content Include="Content\blank.png" />
+    <Content Include="Content\gradient.png" />
+    <Content Include="Game.ico" />
+    <Content Include="GameThumbnail.png" />
     <Content Include="Icon.ico" />
   </ItemGroup>
   <ItemGroup>
@@ -80,9 +80,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="NewFolder1\" />
+    <None Include="Content\gamefont.spritefont" />
+    <None Include="Content\menufont.spritefont" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
