--- a/MetroDigger/MetroDigger/MetroDigger/MetroDigger.csproj
+++ b/MetroDigger/MetroDigger/MetroDigger/MetroDigger.csproj
@@ -98,6 +98,12 @@
     <Compile Include="Gameplay\IMovable.cs" />
     <Compile Include="Gameplay\IShooter.cs" />
     <Compile Include="Gameplay\MovementHandler.cs" />
+    <Compile Include="Manager\UserManager.cs" />
+    <Compile Include="Screens\LoadMenuScreen.cs" />
+    <Compile Include="Screens\LogScreen.cs" />
+    <Compile Include="Screens\NewGameScreen.cs" />
+    <Compile Include="Screens\PauseMenu2.cs" />
+    <Compile Include="Screens\RankingScreen.cs" />
     <Compile Include="Utils\Animation.cs" />
     <Compile Include="Utils\AnimationPlayer.cs" />
     <Compile Include="Gameplay\Entities\Terrains\Free.cs" />
@@ -120,25 +126,24 @@
     <Compile Include="MetroDiggerGame.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="Screens\BackgroundScreen.cs" />
+    <Compile Include="Screens\old\BackgroundScreen.cs" />
     <Compile Include="Screens\GameplayScreen.cs" />
     <Compile Include="Screens\GameScreen.cs" />
     <Compile Include="Manager\InputHandler.cs" />
     <Compile Include="Screens\LoadingScreen.cs" />
-    <Compile Include="Screens\MainMenuScreen.cs" />
+    <Compile Include="Screens\StartScreen.cs" />
     <Compile Include="Screens\MenuObjects\MenuCheckField.cs" />
     <Compile Include="Screens\MenuObjects\MenuEntry.cs" />
     <Compile Include="Screens\MenuObjects\MenuLabel.cs" />
     <Compile Include="Screens\MenuObjects\MenuObject.cs" />
     <Compile Include="Screens\MenuObjects\MenuRadioField.cs" />
     <Compile Include="Screens\MenuObjects\MenuTextInput.cs" />
-    <Compile Include="Screens\MenuScreen.cs" />
-    <Compile Include="Screens\MessageBoxScreen.cs" />
-    <Compile Include="Screens\NewMenuScreen.cs" />
+    <Compile Include="Screens\old\MenuScreen.cs" />
+    <Compile Include="Screens\old\MessageBoxScreen.cs" />
+    <Compile Include="Screens\old\NewMenuScreen.cs" />
     <Compile Include="Screens\OptionsMenuScreen.cs" />
-    <Compile Include="Screens\PauseMenuScreen.cs" />
-    <Compile Include="Screens\PlayerIndexEventArgs.cs" />
-    <Compile Include="Screens\SaveScreen.cs" />
+    <Compile Include="Screens\old\PauseMenuScreen.cs" />
+    <Compile Include="Screens\SaveMenuScreen.cs" />
     <Compile Include="Manager\GameManager.cs" />
     <Compile Include="Manager\Settings\GameOptions.cs" />
     <Compile Include="Manager\Settings\UserData.cs" />
