--- a/MetroDigger/MetroDigger/MetroDigger/MetroDigger.csproj
+++ b/MetroDigger/MetroDigger/MetroDigger/MetroDigger.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Gameplay\IMovable.cs" />
     <Compile Include="Gameplay\IShooter.cs" />
     <Compile Include="Gameplay\MovementHandler.cs" />
+    <Compile Include="Gameplay\WaterSpiller.cs" />
     <Compile Include="Manager\GameManager.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Screens\LevelAccomplishedScreen.cs" />
@@ -128,7 +129,7 @@
     <Compile Include="Gameplay\Entities\Characters\Stone.cs" />
     <Compile Include="Gameplay\TopBar.cs" />
     <Compile Include="Gameplay\Level.cs" />
-    <Compile Include="Gameplay\Entities\Tiles\Tile.cs" />
+    <Compile Include="Gameplay\Tiles\Tile.cs" />
     <Compile Include="MetroDiggerGame.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
