--- a/MetroDigger/MetroDigger/MetroDigger/MetroDigger.csproj
+++ b/MetroDigger/MetroDigger/MetroDigger/MetroDigger.csproj
@@ -74,6 +74,7 @@
   <ItemGroup>
     <Compile Include="Effects\Particle.cs" />
     <Compile Include="Effects\ParticleEngine.cs" />
+    <Compile Include="Gameplay\Board.cs" />
     <Compile Include="Gameplay\CollisionDetection\CircleDetector.cs" />
     <Compile Include="Gameplay\CollisionDetection\CollisionDetector.cs" />
     <Compile Include="Gameplay\CollisionDetection\ICollisionDetector.cs" />
@@ -85,24 +86,27 @@
     <Compile Include="Gameplay\Drivers\KeyboardDriver.cs" />
     <Compile Include="Gameplay\Drivers\StraightDriver.cs" />
     <Compile Include="Gameplay\Entities\DynamicEntity.cs" />
-    <Compile Include="Gameplay\Entities\IBoardObject.cs" />
-    <Compile Include="Gameplay\Entities\ICollideable.cs" />
-    <Compile Include="Gameplay\Entities\IDrawable.cs" />
-    <Compile Include="Gameplay\Entities\IUpdateable.cs" />
+    <Compile Include="Gameplay\Abstract\IBoardObject.cs" />
+    <Compile Include="Gameplay\Abstract\ICollideable.cs" />
+    <Compile Include="Gameplay\Abstract\IDrawable.cs" />
+    <Compile Include="Gameplay\Abstract\IUpdateable.cs" />
+    <Compile Include="Gameplay\Abstract\IDynamicEntity.cs" />
     <Compile Include="Gameplay\Entities\Others\Drill.cs" />
     <Compile Include="Gameplay\Entities\Others\Metro.cs" />
     <Compile Include="Gameplay\Entities\Others\PowerCell.cs" />
-    <Compile Include="Gameplay\Entities\Characters\ICollector.cs" />
+    <Compile Include="Gameplay\Abstract\ICollector.cs" />
     <Compile Include="Gameplay\Entities\Others\Station.cs" />
     <Compile Include="Gameplay\Entities\Others\Tunnel.cs" />
     <Compile Include="Gameplay\Entities\StaticEntity.cs" />
     <Compile Include="Gameplay\Entities\Terrains\Buffer.cs" />
     <Compile Include="Gameplay\Entities\Terrains\Terrain.cs" />
-    <Compile Include="Gameplay\IDriller.cs" />
-    <Compile Include="Gameplay\IMovable.cs" />
-    <Compile Include="Gameplay\IShooter.cs" />
+    <Compile Include="Gameplay\Abstract\IDriller.cs" />
+    <Compile Include="Gameplay\Abstract\IMovable.cs" />
+    <Compile Include="Gameplay\Abstract\IShooter.cs" />
     <Compile Include="Gameplay\MovementHandler.cs" />
     <Compile Include="Gameplay\WaterSpiller.cs" />
+    <Compile Include="Logging\ILogger.cs" />
+    <Compile Include="Logging\Logger.cs" />
     <Compile Include="Manager\GameManager.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Screens\LevelAccomplishedScreen.cs" />
@@ -119,8 +123,7 @@
     <Compile Include="Gameplay\Entities\Terrains\Rock.cs" />
     <Compile Include="Gameplay\Entities\Terrains\Soil.cs" />
     <Compile Include="Gameplay\Entities\Terrains\Water.cs" />
-    <Compile Include="Gameplay\Entities\Others\Bullet.cs" />
-    <Compile Include="Gameplay\Entities\Characters\Character.cs" />
+    <Compile Include="Gameplay\Entities\Characters\Bullet.cs" />
     <Compile Include="Gameplay\Entities\Characters\Miner.cs" />
     <Compile Include="Gameplay\Entities\Characters\Ranger.cs" />
     <Compile Include="Gameplay\Entities\Entity.cs" />
@@ -193,9 +196,7 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Logging\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
   <!--
