--- a/MetroDigger/MetroDigger/MetroDigger/MetroDigger.csproj
+++ b/MetroDigger/MetroDigger/MetroDigger/MetroDigger.csproj
@@ -111,7 +111,7 @@
     <Compile Include="Screens\ChooseLevelScreen.cs" />
     <Compile Include="Screens\LoadMenuScreen.cs" />
     <Compile Include="Screens\LogScreen.cs" />
-    <Compile Include="Screens\PauseMenu2.cs" />
+    <Compile Include="Screens\PauseMenu.cs" />
     <Compile Include="Screens\RankingScreen.cs" />
     <Compile Include="Serialization\LevelDto.cs" />
     <Compile Include="Effects\Animation.cs" />
@@ -133,7 +133,6 @@
     <Compile Include="MetroDiggerGame.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="Screens\old\BackgroundScreen.cs" />
     <Compile Include="Screens\GameplayScreen.cs" />
     <Compile Include="Screens\GameScreen.cs" />
     <Compile Include="Manager\InputHandler.cs" />
@@ -143,13 +142,10 @@
     <Compile Include="Screens\MenuObjects\MenuEntry.cs" />
     <Compile Include="Screens\MenuObjects\MenuLabel.cs" />
     <Compile Include="Screens\MenuObjects\MenuObject.cs" />
-    <Compile Include="Screens\MenuObjects\MenuRadioField.cs" />
     <Compile Include="Screens\MenuObjects\MenuTextInput.cs" />
     <Compile Include="Screens\MenuScreen.cs" />
     <Compile Include="Screens\MessageBoxScreen.cs" />
-    <Compile Include="Screens\old\NewMenuScreen.cs" />
     <Compile Include="Screens\OptionsMenuScreen.cs" />
-    <Compile Include="Screens\old\PauseMenuScreen.cs" />
     <Compile Include="Screens\SaveMenuScreen.cs" />
     <Compile Include="Manager\ScreenManager.cs" />
     <Compile Include="Manager\Settings\GameOptions.cs" />
